# mouham-ia

./: .gitignore  README.md  export_chunks.py  pyproject.toml  run.sh
src/legal_rag/: __init__.py  cli.py  config.py  embeddings.py  pinecone_store.py  rag.py  reasoning.py  retriever.py  router.py
src/legal_rag/ingest/: __init__.py  article_detector.py  chunker.py  pdf_extractor.py
